--- a/src/Samples/Sample.AspNet/Views/staticview.html
+++ b/src/Samples/Sample.AspNet/Views/staticview.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Nancy - Static view served by ASP.NET host</title>
+		<title>Nancy - Static view served by Nancy</title>
 	</head>
 	<body>
-	    <h1>Static view served by ASP.NET host</h1>
+	    <h1>Static view served by Nancy</h1>
         <p>
-            This view was served by the Gate.Nancy OWIN application endpoint.
+            This view was served by the Gate.Nancy OWIN application bridge.
         </p>
 	</body>
 </html>
