--- a/src/Samples/Sample.AspNet/Views/staticview.html
+++ b/src/Samples/Sample.AspNet/Views/staticview.html
@@ -1,12 +1,19 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
-	<head>
-		<title>Nancy - Static view served by Nancy</title>
-	</head>
-	<body>
-	    <h1>Static view served by Nancy</h1>
-        <p>
-            This view was served by the Gate.Nancy OWIN application bridge.
-        </p>
-	</body>
+<head>
+    <title>Nancy - Static view served by Nancy</title>
+</head>
+<body>
+    <h1>
+        Static view served by Nancy</h1>
+    <p>
+        This view was served by the Gate.Nancy OWIN application bridge.
+    </p>
+    <form method="post">
+    <p>
+        Post something
+        <input type="text" name="something" />
+        <input type="submit" value="go" /></p>
+    </form>
+</body>
 </html>
